Thu Jun 17 13:00:47 GMT 2010  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Missing changes from previous commit.

Thu Jun 17 11:37:30 GMT 2010  Olly Betts <olly@survex.com>

	* api/valuerangeproc.cc: Add support for open-ended ranges
	  (ticket#480).
	* docs/queryparser.html,docs/valueranges.rst: Document.
	* tests/queryparsertest.cc: Add feature tests.

Thu Jun 17 06:15:24 GMT 2010  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Switch out of IN_GROUP mode when we
	  emit a WILDCARD.  Fixeds bug#484.
	* tests/queryparsertest.cc: Add regression testcase to wildcard1.

Thu Jun 17 02:42:16 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Rename failedadd1 to failedreplace1 as it's the
	  replace which fails really.  Add failedreplace2 which adds explicit
	  coverage for the case of a failed replace when the database isn't
	  empty to start with.

Tue Jun 15 12:45:36 GMT 2010  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Note in the description of
	  set_database() what the database is used for.

Tue Jun 15 12:26:12 GMT 2010  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Fix formatting of bullet list.

Mon Jun 14 17:02:10 GMT 2010  Olly Betts <olly@survex.com>

	* backends/brass/brass_table.cc,backends/chert/chert_table.cc,
	  backends/flint/flint_table.cc: cancel() now marks the Btree as
	  unmodified.
	* tests/api_backend.cc: Add regression test failedadd1.

Sun Jun 13 16:07:49 GMT 2010  Olly Betts <olly@survex.com>

	* common/Makefile.mk,common/safeuuid.h,configure.ac: Fix mingw build to
	  use __WIN32__ UUID API.

Sun Jun 13 12:25:24 GMT 2010  Olly Betts <olly@survex.com>

	* tests/perftest/freemem.cc: Fix whitespace to match Omega's version.

Sun Jun 13 11:52:24 GMT 2010  Olly Betts <olly@survex.com>

	* tests/perftest/freemem.cc: Merge in changes from omega's version.
	  Clean up whitespace issues.  Put the __WIN32__ case last, as we